Prime correzioni e tolta classe debug

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Discord Layout</title>
+        <title>Discord</title>
 
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body class="debug">
+    <body>
 
         <header>
             <!-- sezione logo e links -->
-            <div class="container container-flex top-part">
+            <div class="container container-flex header-top">
                 <div class="header-line">
                     Logo
                 </div>
@@ -24,14 +24,14 @@
                         <li>Link</li>
                     </ul>
                 </nav>
-                <div class="header-line login">
+                <div class="header-line">
                     Login
                 </div>
             </div>
 
             <!-- sezione titolo -->
-            <div class="bottom-part container-flex">
-                <div id="title">
+            <div class="header-bottom container-flex">
+                <div class="title">
 
                 </div>
             </div>
@@ -79,7 +79,7 @@
             <!-- sezione column -->
             <section class="gray-background">
                 <div class="container">
-                    <div id="green-square">
+                    <div class="green-square">
 
                     </div>
                 </div>
