--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>Discord</title>
 
         <link rel="stylesheet" href="css/style.css">
+
+        <link href="https://fonts.cdnfonts.com/css/whitney-2" rel="stylesheet">
+                
     </head>
     <body>
 
@@ -14,24 +17,40 @@
             <!-- sezione logo e links -->
             <div class="container container-flex header-top">
                 <div class="header-line">
-                    Logo
+                    <img src="img/logo.svg" alt="Immagine non trovata">
                 </div>
+
                 <nav class="header-line">
                     <ul class="container-flex">
-                        <li>Link</li>
-                        <li>Link</li>
-                        <li>Link</li>
-                        <li>Link</li>
+                        <li>
+                            <a href="#">Scarica</a>
+                        </li>
+                        <li>
+                            <a href="#">Perchè Discord</a>
+                        </li>
+                        <li>
+                            <a href="#">Nitro</a>
+                        </li>
+                        <li>
+                            <a href="#">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a href="#">Assistenza</a>
+                        </li>
                     </ul>
                 </nav>
-                <div class="header-line">
-                    Login
+
+                <div class="header-line container-flex">
+                    <button>Accedi</button>
                 </div>
             </div>
 
             <!-- sezione titolo -->
             <div class="header-bottom container-flex">
                 <div class="title">
+                    <h1>Il tuo posto per parlare</h1>
+
+                    <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piu facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
 
                 </div>
             </div>
