--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 
                     <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piu facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
 
-                </div>
+                    <div class="buttons">
+                        <button>🠗 Scarica per Mac</button>
+                        <button>Apri Discord nel tuo browser</button>
+                    </div>
+                 </div>
             </div>
         </header>
 
