--- a/index.html
+++ b/index.html
@@ -65,36 +65,42 @@
             <!-- sezioni row -->
             <section class="white-background">
                 <div class="container container-flex">
-                    <div class="blue-square">
-
+                    <div class="column-img">
+                        <img src="img/item1.svg" alt="Immagine non trovata">
                     </div>
 
-                    <div class="pink-square">
+                    <div class="column-text">
+                        <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
 
+                        <p>Iserver Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
                     </div>
                 </div>
             </section>
 
             <section class="gray-background">
                 <div class="container container-flex">
-                    <div class="pink-square">
+                    <div class="column-text">
+                        <h2>Dove trovarsi è facile</h2>
 
+                        <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici del tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
                     </div>
 
-                    <div class="blue-square">
-                        
+                    <div class="column-img">
+                        <img src="img/item2.svg" alt="Immagine non trovata">
                     </div>
                 </div>
             </section>
 
             <section class="white-background">
                 <div class="container container-flex">
-                    <div class="blue-square">
-
+                    <div class="column-img">
+                        <img src="img/item3.svg" alt="Immagine non trovata">
                     </div>
 
-                    <div class="pink-square">
-                        
+                    <div class="column-text">
+                        <h2>Da pochi a un fandom</h2>
+
+                        <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
                     </div>
                 </div>
             </section>
@@ -102,9 +108,15 @@
             <!-- sezione column -->
             <section class="gray-background">
                 <div class="container">
-                    <div class="green-square">
+                    <div class="big-column">
+                        <h2>Tecnologia affidabile per tenersi in contatto</h2>
 
+                        <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                        <div>
+                            <img src="img/item4-big.svg" alt="Immagine non trovata">
+                        </div>
                     </div>
+
                 </div>
             </section>
         </main>
