Add menù social a scomparsa

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -147,9 +147,23 @@
                 <div class="social">
                     <h3>Il tuo posto per parlare</h3>
 
-                    <img src="img/ita.png" alt="Immagine non trovata">
+                    <ul>
+                        <li>
+                            <img src="img/ita.png" alt="Immagine non trovata"> <a href="#" id="main-language">Italiano ᐯ</a>
 
-                    <span>Italiano ᐯ</span>
+                            <ul>
+                                <li>
+                                    <a href="#" class="language">English</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="language">French</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="language">German</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                     
                     <div class="icons">
                         <i class="fa-brands fa-twitter"></i>
